# fastapi-basics

./: Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml
alembic/versions/: fdf7a397fb5a_auto_generated.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemes.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
