[project]
name = "fastapi-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
packages = [{include = "fastapi_basics", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
